2014-01-08 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: fixed compilation error.

2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: fix HTTP retry starvation in a sequential retry with
      in loop sleep time. This causes MOs that can't be delivered to the 
      HTTP application layer to be held in the retry queue for too long.
      Now we use the timer abstracted data type to trigger the retry call
      asynchronously for every MO message event.
      
2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * gwlib/gw-timer.[ch]: abstracting the wap/timers.[ch] module, making
      it independent from the WAP parts, and useable for any delay object
      handling.
      
2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document escape code %# used to 
      escape in values from the meta-data parts.
    * gw/urltrans.c: implement escape code %# used for meta-data values.
    Thanks to Alejandro Guerrieri for the patchset.
    
2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document HTTP admin URI /remove-message
    * gw/bb_http.c, gw/bearerbox.[ch]: implement HTTP admin URI command
      /remove_message.
    Thanks to Alejandro Guerrieri for the patchset.
    
2014-01-06  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: implement --with-redis option to support Redis.
    * gw-config.h.in: add HAVE_REDIS macro definition.
    * doc/examples/dlr-redis.conf: Redis config example.
    * doc/userguide/userguide.xml: adding Redis support documentation.
    * gw/dlr_p.h: extending the dlr_entry struct to hold information if
      we used the destination address in the lookup process, also adds
      the TTL variable to dlr_db_fields struct.
    * gw/dlr_redis.c: implements Redis support as DLR storage backend.
    * gw/dlr.[ch]: add 'ttl' config handling and extend dlr_add() prototype