@@ -1,3 +1,6 @@
+2014-01-31 Alexander Malysh <amalysh at kannel.org>
+    * socket.[ch]: renamed interface_name to source_addr to avoid confusion.
+
 2014-01-08 Alexander Malysh <amalysh at kannel.org>
     * doc/userguide/userguide.xml: fixed compilation error.
 
